kubernetes/components/network-policy/nginx/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}-nginx-external
spec:
  endpointSelector:
    matchLabels:
      app:kubernetes.io/component: ${APP}
      app:kubernetes.io/instance: ${APP}
      app:kubernetes.io/name: ${APP}
  ingress:
    # Allow from Ingress
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: controller
            app:kubernetes.io/instance: nginx-external
            app:kubernetes.io/name: ingress-nginx
        - matchLabels:
            io:kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
